# yamlquill

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  THIRD-PARTY-LICENSES.md  TODO-task6.md  demo-output.yaml  test_validation.yaml
.github/workflows/: ci.yml  release.yml
demo/: demo-data.yaml  demo.tape
docs/: phase2c-current-state-analysis.md  phase2c-test-results.md
docs/plans/: 2026-01-19-editing-operations.md  2026-01-19-jeditor-design.md  2026-01-19-jeditor-implementation.md  2026-01-21-undo-redo-design.md  2026-01-21-undo-redo-implementation.md  2026-01-23-add-jsonl-support-design.md  (+35 more)
examples/: complex.yaml  foo.json  sample.jsonl  sample.yaml  test_comment_roundtrip.rs
scripts/: release-notes  ver
src/: lib.rs  main.rs
tests/: anchor_alias_basic_tests.rs  anchor_alias_extraction_tests.rs  anchor_alias_parser_tests.rs  basic_yaml.rs  comment_data_model_tests.rs  comment_display_tests.rs  comment_editing_tests.rs  comment_extraction_tests.rs  comment_roundtrip_tests.rs  config_tests.rs  document_tests.rs  editor_integration_tests.rs  editor_integration_tests.rs.bak  editor_tests.rs  file_tests.rs  format_command_tests.rs  format_preservation_tests.rs  gzip_integration.rs  input_tests.rs  integration_editing.rs  integration_jsonl.rs  integration_jsonpath.rs  jsonl_tests.rs  jsonpath_tests.rs  jumplist_tests.rs  marks_tests.rs  multi_document_tests.rs  navigation_tests.rs  navigation_tests.rs.bak  register_tests.rs  repeat_tests.rs  sibling_navigation_tests.rs  state_field_tests.rs  theme_tests.rs  undo_tests.rs  yaml_display_tests.rs
(+35 files in other folders)
